5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4385/executions/1892_1594.log
== TEST (2019-07-09 18:18:39) 
-- CODE:
from numpy import*
x=array(eval(input("digite: ")))
s=0
b=1
for i in range(size(x)):
	s=s + (v[i]*b)
	b=b + 1
print(s)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-09 18:19:10) 
-- CODE:
from numpy import*
x=array(eval(input("digite: ")))
s=0
b=1
for i in range(size(x)):
	s=s + (v[i]*b)
	b=b + 1
print(s)
-- EXECUTION TIME:
1.09852
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1892/1594/main.py", line 6, in <module>
    s=s + (v[i]*b)
NameError: name 'v' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-09 18:19:11) 
-- CODE:
from numpy import*
x=array(eval(input("digite: ")))
s=0
b=1
for i in range(size(x)):
	s=s + (v[i]*b)
	b=b + 1
print(s)
-- EXECUTION TIME:
2.46538
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1892/1594/main.py", line 6, in <module>
    s=s + (v[i]*b)
NameError: name 'v' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 18:19:43) 
-- CODE:
from numpy import*
v=array(eval(input("digite: ")))
s=0
b=1
for i in range(size(v)):
	s=s+(v[i]*b)
	b=b+1
print(s)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-09 18:19:45) 
-- CODE:
from numpy import*
v=array(eval(input("digite: ")))
s=0
b=1
for i in range(size(v)):
	s=s+(v[i]*b)
	b=b+1
print(s)
-- EXECUTION TIME:
0.874387
-- TEST CASE 1:
---- input:
[1,0,3]
---- correct output:
10
---- user output:
10
-- TEST CASE 2:
---- input:
[3,2,1,5,3]
---- correct output:
45
---- user output:
45
-- TEST CASE 3:
---- input:
[2,3]
---- correct output:
8
---- user output:
10
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-09 18:19:47) 
-- CODE:
from numpy import*
v=array(eval(input("digite: ")))
s=0
b=1
for i in range(size(v)):
	s=s+(v[i]*b)
	b=b+1
print(s)
-- EXECUTION TIME:
1.21525
-- TEST CASE 1:
---- input:
[1,0,3]
---- correct output:
10
---- user output:
10
-- TEST CASE 2:
---- input:
[3,2,1,5,3]
---- correct output:
45
---- user output:
45
-- TEST CASE 3:
---- input:
[2,3]
---- correct output:
8
---- user output:
8
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
